# KaggleOptiver

./: .gitignore  pyproject.toml
kgl/: data.py  nearest_neighbors.py  utils.py
notebooks/: 1st-place-public-2nd-place-solution.ipynb  introduction-to-financial-concepts-and-data.ipynb  optiver.ipynb  optiver_intro_simple.ipynb  winner.ipynb
