[tool.poetry]
name = "kaggleoptiver"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytorch-tabnet = "^3.1.1"
seaborn = "^0.11.2"
pandas = "^1.4.3"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
lightgbm = "^3.3.2"
joblib = "^1.1.0"
sklearn = "^0.0"
tqdm = "^4.64.0"
jupyterlab = "^3.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
